force-app/main/default/objects/DocumentChecklistItem/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <formula>DocumentCategory.MasterLabel</formula>
    <label>Document Category</label>
    <type>Text</type>
</CustomField>