force-app/main/default/objects/DocumentChecklistItem/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>This field indicates the due date for uploading the document.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>