force-app/main/default/objects/DocumentChecklistItem/listViews/All_DocumentChecklistItems.listView-meta.xml
<ListView>
    <fullName>All_DocumentChecklistItems</fullName>
    <columns>Name</columns>
    <columns>Due_Date__c</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>ParentRecord</columns>
    <columns>Status</columns>
    <columns>Who</columns>
    <filterScope>Everything</filterScope>
    <label>All Document Checklist Items</label>
</ListView>